validation of form done

--- a/index.html
+++ b/index.html
@@ -70,15 +70,15 @@
                             <input class="cvr_input" type="text" name="cvr" maxlength=1 >
                         </div>
                         <input class="left" type="text" name="business_name" placeholder="Businessname" id="Businessname">
-                        <input class="left" type="text" name="name" placeholder="Name">
-                        <input class="left" type="text" name="last_name" placeholder="Last Name">
-                        <input class="left" type="text" name="address" placeholder="Address">
-                        <input class="left" type="text" name="zip" placeholder="ZIP Code">
-                        <input class="left" type="text" name="city" placeholder="City">
-                        <input class="left" type="text" name="email" placeholder="E-mail">
-                        <input class="left" type="text" name="confirm_email" placeholder="Confirm E-mail">
-                        <input class="left" type="password" name="password" placeholder="Password">
-                        <input class="left" type="password" name="confirm_password" placeholder="Confirm Password">
+                        <input class="left" type="text" name="name" placeholder="Name" id="name">
+                        <input class="left" type="text" name="last_name" placeholder="Last Name" id="last_name">
+                        <input class="left" type="text" name="address" placeholder="Address" id="address">
+                        <input class="left" type="text" name="zip" placeholder="ZIP Code" id="zipcode">
+                        <input class="left" type="text" name="city" placeholder="City" id="city">
+                        <input class="left" type="text" name="email" placeholder="E-mail" id="email">
+                        <input class="left" type="text" name="confirm_email" placeholder="Confirm E-mail" id="confirm_email">
+                        <input class="left" type="password" name="password" placeholder="Password" id="password">
+                        <input class="left" type="password" name="confirm_password" placeholder="Confirm Password" id="confirm_password">
                     </section>
                     <hr class="section_border">
                     <section class="source clear">
@@ -329,7 +329,7 @@
                     <section class="accordian_sec">
                         <h3>Export</h3>
                         <div class="world_map" >
-                            <input type="checkbox" name="asia"   class="wm_checkboxes asia_chbox" id="a" data-id="#AS" data-code="AS" data-flag=flag_as onClick="funCheckbox(this);">
+                            <input type="checkbox" name="asia"   class="wm_checkboxes asia_chbox">
                             <input type="checkbox" name="africa"   class="wm_checkboxes africa_chbox" >
                             <input type="checkbox" name="europe"  class="wm_checkboxes europe_chbox" >
                             <input type="checkbox" name="north_america"  class="wm_checkboxes namerica_chbox" >
@@ -560,6 +560,7 @@
                         <i class="fa fa-angle-double-left flyout_arrow" aria-hidden="true"></i>REGISTERED DATA</p>
                 </div>
             </div>
+            <div class="a"></div>
         </main>
         <footer>
             <div class="max_width">
